--- a/banking-domain/build.gradle
+++ b/banking-domain/build.gradle
@@ -1,29 +1,41 @@
+apply plugin: 'groovy'
+apply plugin: 'org.springframework.boot'
+
+
+jar {
+    enabled = true
+}
+bootJar {
+    classifier = 'boot'
+}
+
 dependencies {
     implementation project(':banking-common')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
-
-    compile 'org.springframework.cloud:spring-cloud-stream'
-    compile 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.1.2.RELEASE'
-    compile 'org.springframework.cloud:spring-cloud-config-client'
-    compile 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
-
     implementation 'org.mapstruct:mapstruct-jdk8:1.3.1.Final'
 
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.1.2.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 
-    annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+    implementation 'org.projectlombok:lombok'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-//    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
+    testCompile "org.spockframework:spock-spring:1.3-groovy-2.5"
 
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 }
 
 test {
-    useJUnitPlatform()
+    systemProperty 'spring.profiles.active', 'TEST'
 }
