--- a/banking-rest-api/build.gradle
+++ b/banking-rest-api/build.gradle
@@ -1,7 +1,11 @@
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+apply plugin: 'org.springframework.boot'
+
+
+jar {
+    enabled = true
+}
+bootJar {
+    classifier = 'boot'
 }
 
 dependencies {
@@ -9,15 +13,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.1.2.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 
-    compile 'org.springframework.cloud:spring-cloud-stream'
-    compile 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.1.2.RELEASE'
-    compile 'org.springframework.cloud:spring-cloud-config-client'
-    compile 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
-
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
