--- a/banking-domain/src/main/resources/application-docker.yml
+++ b/banking-domain/src/main/resources/application-docker.yml
@@ -2,5 +2,4 @@ spring:
   data:
     mongodb:
       host: db
-  kafka:
-    bootstrap-servers: kafka:9092
+  cloud.stream.kafka.binder.brokers: kafka
